scenarios/02-listener-policy/kinds-multi-listener/34-backend-b-grpcroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/grpcroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: backend-b-grpc-route
  namespace: backend-b
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: kind-restricted-gateway
      namespace: gateway-system
      sectionName: grpcs
  hostnames:
    - grpc-b.grpc.example.test
  rules:
    - backendRefs:
        - name: grpc-api
          port: 9000
